--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "stripe": "^10.16.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
